refactor: improve code quality across service, security and dto layers
- fix: delete() throws 404 instead of returning null (User, Card)
- fix: remove CascadeType.ALL from Card.owner to prevent accidental user deletion
- perf: replace two save() calls with saveAll() in TransactionServiceImpl
- refactor: extract JWT expiration to config (security.jwt.expiration-ms)
- refactor: inject AuthenticationProvider as parameter in SecurityConfig
- refactor: move role loading from UserMapper to UserServiceImpl
- fix: add @NotBlank to UserDto.phoneNumber
- refactor: remove unused throws IOException from CardController/CardService
- chore: remove unused toUserDto and rolesToRoleNames from UserMapper
- chore: remove unused userDetailsService field from SecurityConfig